# ExcavatorQtQuick3D_EdsonSilva

./: README.md
ExcavatorQtQuick3D/: CMakeLists.txt  Main.qml
ExcavatorQtQuick3D/modules/MyModule/: CMakeLists.txt  DesertTerrain.qml  HUDSelectTerrain.qml  Joystick.qml  Snow_terrain_mesh.qml  backend.cpp  backend.h
ExcavatorQtQuick3D/modules/MyModule/meshes/: aset_nature_rock_M_venodhb_LOD0.mesh  terrain_mesh.mesh
